gitops/demo-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-api
  labels:
    app.kubernetes.io/part-of: devops-03
